chutoro-bench-datasets/tests/trybuild/dataset_recipe_skip_phase.stderr
error[E0308]: mismatched types
  --> tests/trybuild/dataset_recipe_skip_phase.rs:99:42
   |
99 |     let _prepared = recipe.prepare(&ctx, fetched)?;
   |                            -------       ^^^^^^^ expected `Validated`, found `Fetched`
   |                            |
   |                            arguments to this method are incorrect
   |
note: method defined here
  --> src/recipe.rs
   |
   |     fn prepare(
   |        ^^^^^^^
